--- a/pom.xml
+++ b/pom.xml
@@ -30,13 +30,13 @@
     <project.version>1.0-SNAPSHOT</project.version>
      <org.exoplatform.depmgt.version>6</org.exoplatform.depmgt.version>
     <!-- JCR Project Dependencies -->
-    <org.exoplatform.kernel.version>2.4.3-GA</org.exoplatform.kernel.version>
-    <org.exoplatform.core.version>2.5.3-GA</org.exoplatform.core.version>
-    <org.exoplatform.ws.version>2.3.3-GA</org.exoplatform.ws.version>
-    <org.exoplatform.jcr.version>1.15.3-GA</org.exoplatform.jcr.version>
+     <org.exoplatform.kernel.version>2.4.1-GA</org.exoplatform.kernel.version>
+    <org.exoplatform.core.version>2.5.1-CP01</org.exoplatform.core.version>
+    <org.exoplatform.ws.version>2.3.1-GA</org.exoplatform.ws.version>
+    <org.exoplatform.jcr.version>1.15.1-CP01</org.exoplatform.jcr.version>
     <!-- GateIn Project Dependencies -->
     <org.gatein.wci.version>2.3.0.Final</org.gatein.wci.version>
-    <org.gatein.portal.version>3.5.3.Final</org.gatein.portal.version>
+    <org.gatein.portal.version>3.5.4.Final</org.gatein.portal.version>
 
     <!-- Platform Project Dependencies -->
     <org.exoplatform.platform-ui.version>4.0.0</org.exoplatform.platform-ui.version>
