move sample portlet lib to tutorial folder

--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,8 @@
   <modules>
     <module>service</module>
     <module>webui</module>
-    <module>eportlet</module>
-    <module>eservice</module>
+    <module>tutorial/eportlet</module>
+    <module>tutorial/eservice</module>
   </modules>
    <scm>
     <connection>scm:git:git://github.com/phamtuanchip/estudy.git</connection>
