--- a/packaging/tomcat/pkg/pom.xml
+++ b/packaging/tomcat/pkg/pom.xml
@@ -14,6 +14,18 @@
   <name>Estudy for Tomcat packaging</name>
 
   <dependencies>
+  
+    <!-- estudy components -->
+    <dependency>
+      <groupId>org.estudy</groupId>
+      <artifactId>estudy-service</artifactId>
+    </dependency>
+         
+    <dependency>
+      <groupId>org.estudy</groupId>
+      <artifactId>estudy-ui</artifactId>
+      <type>war</type>
+    </dependency>
 
     <!-- Logging -->
     <dependency>
