--- a/service/pom.xml
+++ b/service/pom.xml
@@ -15,7 +15,7 @@
   <packaging>jar</packaging>
 
   <name>E study core service</name>
-  <url>https://github.com/phamtuanchip/newcomer</url>
+  <url>https://github.com/phamtuanchip/estudy</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
