--- a/webui/pom.xml
+++ b/webui/pom.xml
@@ -14,7 +14,7 @@
   <packaging>war</packaging>
   
   <name>E study ui </name>
-  <url>https://github.com/phamtuanchip/eportlet</url>
+  <url>https://github.com/phamtuanchip/estudy</url>
   
   <profiles>
       <profile>
