--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,8 @@
     <org.exoplatform.platform-ui.version>4.0.0</org.exoplatform.platform-ui.version>
     <org.exoplatform.commons.version>4.0.0</org.exoplatform.commons.version>
     
+    <quartz.version>2.1.6</quartz.version>
+    
     <!-- Gatein dependencies -->
     <org.shindig.version>2.0.2.Final-gatein-4</org.shindig.version>
     <nl.captcha.simplecaptcha.version>1.1.1.Final-gatein-3</nl.captcha.simplecaptcha.version>
@@ -221,7 +223,11 @@
       </dependency>
       
       <!-- dependencies for packaging-->
-     
+      <dependency>
+        <groupId>org.quartz-scheduler</groupId>
+        <artifactId>quartz</artifactId>
+        <version>${quartz.version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
