http://www.hostedredmine.com/issues/228206 add rest service and mock test for rest service

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <module>service</module>
     <module>webui</module>
     <module>tutorial</module>
+    <module>webservice</module>
     <module>packaging</module>
   </modules>
    <scm>
