http://www.hostedredmine.com/issues/228206 add deploy rest to tomcat

--- a/packaging/tomcat/pkg/pom.xml
+++ b/packaging/tomcat/pkg/pom.xml
@@ -23,6 +23,11 @@
          
     <dependency>
       <groupId>org.estudy</groupId>
+      <artifactId>estudy-webservice</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.estudy</groupId>
       <artifactId>estudy-ui</artifactId>
       <type>war</type>
     </dependency>
