--- a/packaging/tomcat/pkg/pom.xml
+++ b/packaging/tomcat/pkg/pom.xml
@@ -26,6 +26,12 @@
       <artifactId>estudy-webservice</artifactId>
     </dependency>
 
+      <dependency>
+          <groupId>org.estudy</groupId>
+          <artifactId>welcome</artifactId>
+          <type>war</type>
+      </dependency>
+
     <dependency>
       <groupId>org.estudy</groupId>
       <artifactId>estudy-ui</artifactId>
