--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>tutorial</module>
         <module>resources</module>
         <module>juzuapp</module>
+        <module>docs</module>
     </modules>
     <scm>
         <connection>scm:git:git://github.com/phamtuanchip/estudy.git</connection>
@@ -119,6 +120,10 @@
         <version.plugin.clean>2.4.1</version.plugin.clean>
         <version.yuicompressor-maven-plugin>0.7.1</version.yuicompressor-maven-plugin>
         <version.plugin.japex>1.2.3</version.plugin.japex>
+        <!-- Build docs dependencies -->
+        <maven.resources.plugin.version>2.4.3</maven.resources.plugin.version>
+        <org.wikbook.version>0.9.41</org.wikbook.version>
+        <maven.jdocbook.plugin.version>2.1.1</maven.jdocbook.plugin.version>
 
     </properties>
     <dependencyManagement>
