--- a/packaging/tomcat/pkg/pom.xml
+++ b/packaging/tomcat/pkg/pom.xml
@@ -32,6 +32,12 @@
           <type>war</type>
       </dependency>
 
+      <dependency>
+          <groupId>org.estudy</groupId>
+          <artifactId>estudy-resources</artifactId>
+          <type>war</type>
+      </dependency>
+
     <dependency>
       <groupId>org.estudy</groupId>
       <artifactId>estudy-ui</artifactId>
