--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <module>webservice</module>
     <module>webui</module>
     <module>tutorial</module>
+    <module>resources</module>
     <module>packaging</module>
   </modules>
    <scm>
@@ -160,6 +161,13 @@
         <version>${project.version}</version>
         <type>war</type>
       </dependency>
+
+        <dependency>
+            <groupId>org.estudy</groupId>
+            <artifactId>estudy-resources</artifactId>
+            <version>${project.version}</version>
+            <type>war</type>
+        </dependency>
       
       <dependency>
         <groupId>org.estudy</groupId>
