--- a/juzuapp/service/pom.xml
+++ b/juzuapp/service/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.estudy</groupId>
-        <artifactId>estudy</artifactId>
+        <artifactId>estudy-juzu</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
@@ -14,7 +14,7 @@
 
     <name>E study juzu service</name>
     <url>https://github.com/phamtuanchip/estudy</url>
-    <description>eXo E-Learning Webservice</description>
+    <description>eXo E-Learning service</description>
 
   <dependencies>
     <dependency>
