--- a/packaging/tomcat/pkg/pom.xml
+++ b/packaging/tomcat/pkg/pom.xml
@@ -66,7 +66,7 @@
 
       <dependency>
           <groupId>org.estudy</groupId>
-          <artifactId>estudy-juzu-wep</artifactId>
+          <artifactId>estudy-juzu-web</artifactId>
           <type>war</type>
       </dependency>
 
