add defaule home, learning, juzu page

--- a/juzuapp/webui/pom.xml
+++ b/juzuapp/webui/pom.xml
@@ -103,7 +103,7 @@
     </dependency>
   </dependencies>
  <build>
-    <finalName>estudy-juzu-wep</finalName><!-- The war name -->
+    <finalName>estudy-juzu-web</finalName><!-- The war name -->
     <plugins>
       <plugin>
         <artifactId>maven-resources-plugin</artifactId>
