--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: java
 before_install:
 install:
 #- mvn clean install -s settings.xml -U
- - mvn clean install -s settings.xml -Ppkg=tomcat -Dservers.dir=/clean-pkg -Ddownload -U
+# - mvn clean install -s settings.xml -Ppkg=tomcat -Dservers.dir=/clean-pkg -Ddownload -U
+- ./mvn-pkg.sh
 script:
 notifications:
   email:
