--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: java
 before_install:
-install:
+install: 
+- echo off
 #- mvn clean install -s settings.xml -Ppkg-tomcat -Ddownload
 script:
 - ./mvn-pkg.sh
 notifications:
   email:
-    - open-estudy@googlegroups.com
-    - open.estudy@groups.facebook.com
+    - phamtuanchip@gmail.com
   
