fix build ear falure and webservice tipo

--- a/extension/config/pom.xml
+++ b/extension/config/pom.xml
@@ -29,8 +29,8 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>estudy-extension-config</artifactId>
-  <name>GateIn Portal Sample Extension Configuration</name>
+  <name>Estudy Extension Configuration</name>
   <packaging>jar</packaging>
   <url>http://www.exoplatform.org</url>
-  <description>GateIn Sample Extension Configuration</description>
+  <description>Estudy Extension Configuration</description>
 </project>
