--- a/extension/pom.xml
+++ b/extension/pom.xml
@@ -38,7 +38,7 @@
 
   <modules>
         <module>config</module>
-        <module>ear</module>
+        <!-- <module>ear</module> -->
         <module>jar</module>
         <module>war</module>
     </modules>
