--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <module>tutorial</module>
         <module>resources</module>
         <module>juzuapp</module>
-        <module>docs</module>
+       <!-- <module>docs</module> -->
     </modules>
     <scm>
         <connection>scm:git:git://github.com/phamtuanchip/estudy.git</connection>
