--- a/packaging/tomcat/pkg/pom.xml
+++ b/packaging/tomcat/pkg/pom.xml
@@ -103,7 +103,10 @@
           <groupId>org.exoplatform.commons</groupId>
           <artifactId>commons-webui-component</artifactId>
       </dependency>
-
+		<dependency>
+      <groupId>org.exoplatform.commons</groupId>
+      <artifactId>commons-comet-service</artifactId>
+    	</dependency>
       <dependency>
           <?rename CommonsResources.war?>
           <groupId>org.exoplatform.commons</groupId>
